<resources>
    <string name="app_name">Sportive Titans</string>
    <string name="repassword">Repita la contraseña</string>
    <string name="password">Contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="tienes_cuenta">¿Tienes cuenta?</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="empty_email_message">Falta por poner el correo</string>
    <string name="empty_name_message">No has puesto el nombre</string>
    <string name="empty_password_message">Tienes que poner dos veces la misma clave</string>
    <string name="password_not_match">Las contraseñas tienen que coincidir</string>
    <string name="accede">Iniciar sesión</string>
    <string name="log">Acceder</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="title_activity_a">MainActivity</string>
    <string name="title_home">Catálogo</string>
    <string name="title_dashboard">QR</string>
    <string name="title_notifications">Perfil</string>
    <string name="exit">Salir</string>
    <string name="registrar_aqui">Registrate aquí</string>
    <string name="cambiar_pasword">Cambiar Password</string>
    <string name="aqui_card">¡Añade tu tarjeta aquí!</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña Actual</string>
    <string name="faltancampos">Faltan campos</string>
    <string name="equalserrorpassword">La nueva contraseña no puede ser la misma que la actual</string>
    <string name="successful_change_password">Contraseña cambiada con éxito</string>
    <string name="error_password_message">Error al cambiar la contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="settings">Ajustes</string>
    <string name="servicios_contratados">Servicios Contratados</string>
    <string name="QR">QR</string>
    <string name="tu_actividad">Tu actividad</string>
    <string name="tv_escaner">Escaneando</string>
    <string name="title_dialog">titulo</string>
    <string name="message">Mensaje</string>
    <string name="accept">Aceptar</string>
    <string name="no_visa">No hay niguna tarjeta registrada</string>
    <string name="no_seguro_message">Estas intentando acceder a un sitio web no seguro, por motivos de seguridad no podemos redirigirte a esta página.</string>
    <string name="seguir_navegando">Seguir navegando</string>
    <string name="sitio_no_seguro">Sitio no seguro</string>
    <string name="precio_min">El precio minimo es de 1€</string>
</resources>