<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/servicios_contratados"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/settings"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_servicios"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_cambiar_password" />

            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="277dp"
                android:layout_height="24dp"
                android:layout_marginStart="41dp"
                android:text="Email"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_servicios"
                android:layout_width="match_parent"
                android:layout_height="311dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/borderbackground_apptheme"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <Button
                android:id="@+id/bt_exit"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/borderbackground_apptheme"
                android:text="@string/exit"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="277dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="NAME"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:id="@+id/tv_tarjeta"
                android:layout_width="183dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/aqui_card"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9" />


            <Button
                android:id="@+id/bt_cambiar_password"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/borderbackground_apptheme"
                android:text="@string/cambiar_pasword"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/tarjeta"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ImageView
                android:id="@+id/bt_add_card"
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:src="@drawable/ic_add_box"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tarjeta"
                app:layout_constraintStart_toEndOf="@+id/tv_tarjeta"
                app:layout_constraintTop_toTopOf="@+id/tv_tarjeta" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>