<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="187dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sportives_titans_3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Sportives"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="Titans"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/text_input_padding"
        android:paddingLeft="@dimen/text_input_padding"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="@color/grey_hint"
        android:textSize="16sp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input"

        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/text_input_padding"
        android:paddingLeft="@dimen/text_input_padding"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="@color/grey_hint"
        android:textSize="16sp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/text_input_padding"
            android:paddingLeft="@dimen/text_input_padding"
            android:textAllCaps="false"
            android:textColor="#020202"
            android:textColorHint="@color/grey_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <ImageView
            android:id="@+id/btVisiblePassword"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_visibility_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNewPassWord"
        android:layout_width="345dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/transparent"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:paddingStart="@dimen/text_input_padding"
            android:paddingLeft="@dimen/text_input_padding"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textColorHint="@color/grey_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <ImageView
            android:id="@+id/btVisibleNewPassword"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_visibility_off" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/registrar"
        android:textColor="@color/link_color"
        android:textStyle="bold"
        app:backgroundTint="@color/AppThemeBaseColor"
        app:cornerRadius="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tienes_cuenta"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutNewPassWord"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNewPassWord" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/inicia_sesion"
        android:textColor="@color/link_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>